@@ -3,6 +3,7 @@ Changes for 3.2.4rc1
 New features:
 
 Bug fixes:
+.......PS. [ZBX-11630] added escaping '"', ''', '&', '<' and '>' characters in SOAP XML for VMware requests (Sergejs)
 .......PS. [ZBX-11525] ensured unique value timestamps (clock, ns) from active agents and senders (dimir)
 ........S. [ZBX-11558] fixed removing trigger dependencies for triggers that are created from LLD prototypes (viktors)
 ..F....... [ZBX-11385] fixed interfaces displaying in host inventory page (Oleg, Pavel)
@@ -304,6 +305,7 @@ Changes for 3.0.8rc1
 New features:
 
 Bug fixes:
+.......PS. [ZBX-11630] added escaping '"', ''', '&', '<' and '>' characters in SOAP XML for VMware requests (Sergejs)
 .......PS. [ZBX-11525] ensured unique value timestamps (clock, ns) from active agents and senders (dimir)
 ........S. [ZBX-11558] fixed removing trigger dependencies for triggers that are created from LLD prototypes (viktors)
 ..F....... [ZBX-11385] fixed interfaces displaying in host inventory page (Oleg, Pavel)
